Update
Things done:

--> Endpoint individual game

--> Update the swagger
