# API/Infernum-API/app/Http/Resources/ImageResource.php
@@ -4,16 +4,27 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Attributes as OA;
 
+
+#[OA\Schema(
+    schema: 'ImageResource',
+    type: 'object',
+    properties: [
+        new OA\Property(property: 'id', type: 'integer', example: 1),
+        new OA\Property(property: 'url', type: 'string', example: 'https://image.com'),
+        new OA\Property(property: 'type', type: 'enum', example: 'portrait')
+    ]
+)]
 class ImageResource extends JsonResource
 {
-    /**
-     * Transform the resource into an array.
-     *
-     * @return array<string, mixed>
-     */
+
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return[
+            'id' => $this->id,
+            'url' => $this->url,
+            'type' => $this->type
+        ];
     }
 }
